--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,7 @@
 @import "sass/module/header";
 @import "sass/module/slide";
 @import "sass/module/services";
+@import "sass/module/lessons";
 
       
     
