--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,7 @@
 @import "sass/module/slide";
 @import "sass/module/services";
 @import "sass/module/lessons";
+@import "sass/module/projects";
 
       
     
