--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -50,11 +50,24 @@ h1 {
   font-size: 40px;
 }
 h2 {
-  font-size: 150%;
-  color: #032f3e;
-  padding-left: 15px;
+  font-weight: bold;
+  font-size: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 152px;
+  &:after {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #AB987A;
+    margin-top: 34px;
+    text-align: center;
+    margin-left: 49%;
+
+  }
 }
-h2 {
+h3 {
   font-size: 150%;
   color: #eee;
   padding-left: 15px;
@@ -86,7 +99,18 @@ a:active, a:focus {
 }
 
 
+/**** Button***/
 
+.btn-action {
+
+  width: 270px;
+  height: 64px;
+
+  background-color: #032f3f;
+
+  color: #eee;
+  text-transform: uppercase;
+}
     
         
       
