--- a/sass/module/_services.scss
+++ b/sass/module/_services.scss
@@ -18,20 +18,15 @@
 .services {
 
 
-  margin-top: 128px;
   text-align: center;
 
-      h2 {
-        font-weight: bold;
-        font-size: 24px;
-        text-transform: uppercase;
-
-      }
 
       p {
+            margin-top: 31px;
             font-family: 'Lato Light', sans-serif;
             font-size: 16px;
             line-height: 1.68;
+            text-transform: upper;
           }
 
           .services-btn-bg {
@@ -69,10 +64,15 @@
           }
 
           p:after {
-            content: "";
-            width: 15px;
-            height: 5px;
-            color: #000;
+            content: '';
+            display: block;
+            width: 30px;
+            height: 2px;
+            background-color: #AB987A;
+            margin-top: 27px;
+            text-align: center;
+            margin-left: 49%;
+
           }
       }
 
