--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -44,5 +44,11 @@
  .l-projects-content {
    background-color: #ffffff;
  }
-      
-    
+
+ .l-skype {
+   background-color: #9e9e9e;
+ }
+ .l-latestNews {
+   position: relative;
+   background-color: #f8f9fb;
+ }
