--- a/style.css
+++ b/style.css
@@ -70,15 +70,41 @@ h2 {
     background-color: #AB987A;
     margin-top: 34px;
     text-align: center;
-    margin-left: 49%; }
+    margin-left: 49%;
+    margin-bottom: 40px; }
 
 h3 {
   font-size: 150%;
   color: #eee;
   padding-left: 15px; }
 
-p, ul, li, td {
-  color: black; }
+h4 {
+  text-transform: uppercase;
+  margin-bottom: 37px; }
+  h4:after {
+    content: '';
+    display: block;
+    width: 31px;
+    height: 2px;
+    background-color: #AB987A;
+    margin-top: 30px;
+    margin-bottom: 38px; }
+
+h5 {
+  text-transform: uppercase;
+  margin-bottom: 37px; }
+  h5:after {
+    content: '';
+    display: block;
+    width: 175px;
+    height: 2px;
+    background-color: #AB987A;
+    margin-top: 30px;
+    margin-bottom: 38px; }
+
+p {
+  color: #616161;
+  font-family: 'Roboto Thin', sans-serif; }
 
 a:link {
   color: white;
@@ -104,9 +130,14 @@ a:active, a:focus {
 .btn-action {
   width: 270px;
   height: 64px;
+  border: 3px #032f3f solid;
+  background-color: #9d9d9e;
+  text-transform: uppercase;
+  color: #032f3f; }
+
+.btn-active {
   background-color: #032f3f;
-  color: #eee;
-  text-transform: uppercase; }
+  color: #eee; }
 
 /* Hierarchie de dossier Smacss
     1- Base (p, body, h1, h2....)
@@ -142,6 +173,13 @@ a:active, a:focus {
 
 .l-projects-content {
   background-color: #ffffff; }
+
+.l-skype {
+  background-color: #9e9e9e; }
+
+.l-latestNews {
+  position: relative;
+  background-color: #f8f9fb; }
 
 /* Hierarchie de dossier Smacss
     1- Base (p, body, h1, h2....)
@@ -411,17 +449,6 @@ a:active, a:focus {
       text-transform: uppercase; }
     .projects .project-right .project-right-header .projects-date {
       color: #b5b5b5; }
-  .projects .project-right h4 {
-    text-transform: uppercase;
-    margin-bottom: 37px; }
-    .projects .project-right h4:after {
-      content: '';
-      display: block;
-      width: 31px;
-      height: 2px;
-      background-color: #AB987A;
-      margin-top: 30px;
-      margin-bottom: 38px; }
   .projects .project-right p {
     font-family: 'Lato Light',sans-serif;
     font-size: 16px;
@@ -463,8 +490,112 @@ a:active, a:focus {
       text-transform: uppercase;
       font-family: 'Roboto', sans-serif;
       font-size: 14px; }
-  .projects .project-footer .project-pagination .button-pagination {
+.projects .project-pagination {
+  margin-bottom: 164px; }
+  .projects .project-pagination .button-pagination {
     width: 70px;
-    height: 61px; }
+    height: 61px;
+    background-color: #eee;
+    border: 2px #aa977a solid;
+    color: #aa977a; }
+  .projects .project-pagination .active {
+    color: #eee;
+    background-color: #aa977a; }
+
+/* Hierarchie de dossier Smacss
+    1- Base (p, body, h1, h2....)
+    2- Layout (.l-header, .l-sidebar, .l-footer) Mettre essentiellement les indication de positionnement du bloc
+    3- Module (.widget, .list, .btn, .bloc, .title ou encore la personnalisation (style) des groupes de contenus ds la section ex: section header 
+    4- State (.is-active, is-visible, is-hidden ...) les class concernant les actions avec le JS
+    5- Theme (.dark, .light,....) n├®cessaire surtout lors de th├¿me personnalisable avec plusieurs couleurs
+  
+  Hierargiser un bloc de style
+    .laClass {
+        Box
+        Border
+        Background  
+        text
+        other
+    }*/
+.skype {
+  padding: 0; }
+  .skype .col-md-6, .skype .col-md-4 {
+    padding: 0;
+    margin-top: 55px;
+    margin-bottom: 42px; }
+  .skype .skype-content {
+    color: #eee;
+    font-family: 'Roboto',sans-serif;
+    font-size: 30px;
+    text-transform: uppercase; }
+    .skype .skype-content .skype-icon {
+      color: #032f3f;
+      font-size: 121px; }
+    .skype .skype-content .skype-text {
+      margin-left: 33px;
+      color: #032f3f;
+      line-height: 1.3; }
+      .skype .skype-content .skype-text span {
+        font-family: 'Roboto Thin',sans-serif; }
+
+/* Hierarchie de dossier Smacss
+    1- Base (p, body, h1, h2....)
+    2- Layout (.l-header, .l-sidebar, .l-footer) Mettre essentiellement les indication de positionnement du bloc
+    3- Module (.widget, .list, .btn, .bloc, .title ou encore la personnalisation (style) des groupes de contenus ds la section ex: section header 
+    4- State (.is-active, is-visible, is-hidden ...) les class concernant les actions avec le JS
+    5- Theme (.dark, .light,....) n├®cessaire surtout lors de th├¿me personnalisable avec plusieurs couleurs
+  
+  Hierargiser un bloc de style
+    .laClass {
+        Box
+        Border
+        Background  
+        text
+        other
+    }*/
+.latestNews-button {
+  position: absolute;
+  top: 450px;
+  right: 180px; }
+
+.latestNews .latestNews-header p {
+  text-align: center;
+  font-family: 'Lato Light', sans-serif;
+  font-size: 16px;
+  color: #616161; }
+.latestNews .latestNews-col-left .article1 {
+  position: relative;
+  background-color: #9d9d9e; }
+.latestNews .latestNews-col-left .action-comment {
+  position: absolute;
+  top: 0;
+  right: 0; }
+  .latestNews .latestNews-col-left .action-comment .interaction {
+    width: 60px;
+    height: 64px;
+    text-align: center; }
+    .latestNews .latestNews-col-left .action-comment .interaction p {
+      color: #eee;
+      line-height: 1.45;
+      font-size: 14px; }
+  .latestNews .latestNews-col-left .action-comment .comments {
+    background-color: #aa977a;
+    padding-top: 5px; }
+  .latestNews .latestNews-col-left .action-comment .calendar {
+    background-color: #032f3f;
+    padding-top: 5px; }
+.latestNews .latestNews-col-left .latestNews-article2 .col-md-12 {
+  padding: 0; }
+.latestNews .latestNews-col-left .latestNews-article2 .lien {
+  color: #aa977a;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  text-transform: uppercase; }
+.latestNews .latestNews-col-left .latestNews-article2 .last {
+  color: #032f3f; }
+.latestNews .latestNews-col-left .latestNews-article2 .article2-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
 
 /*# sourceMappingURL=style.css.map */
