--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@
 @import "sass/module/projects";
 @import "sass/module/skype";
 @import "sass/module/latestNews";
+@import "sass/module/testimonials";
 
       
     
