--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -52,3 +52,11 @@
    position: relative;
    background-color: #f8f9fb;
  }
+  .l-testimonials {
+    position: relative;
+    background-image: url('img/pattern.png');
+    padding-bottom: 119px;
+
+    border-bottom: 5px #aa977a solid;
+  }
+
