--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -38,12 +38,12 @@ body {
 .container-fluid {
   max-width: 1700px;
   padding: 0;
-  //border: 1px red solid;
+  border: 1px red solid;
 }
 
 .container {
   max-width: 1200px;
-  //border: 1px green solid;
+  border: 1px green solid;
 
 }
 h1 {
