--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@
 @import "sass/module/skype";
 @import "sass/module/latestNews";
 @import "sass/module/testimonials";
+@import "sass/module/map";
 
       
     
