ajout footer & copyright

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -63,4 +63,10 @@
     position: relative;
     background-color: #9d9d9e;
   }
+  .l-footer {
+    background-color: #0d3542;
+  }
 
+  .l-copyright {
+    background-color: #032f3f;
+  }
